--- a/style.css
+++ b/style.css
@@ -76,6 +76,9 @@ nav a:hover{
 	transform: scale(1.1);
 	background-color: blue;
 	margin: 10px;
+	-ms-transform: translate(50px, 100px); /* IE 9 */
+ 	-webkit-transform: translate(50px, 100px); /* Safari */
+  	transform: translate(50px, 100px);
 }
 .customer p{
 	text-align: center;
